  handlers in the Script panel and they can be breakpointed etc.
  ** Internal: as eval() debugging.

* executable lines marked with green line numbers,
  ** Internal: lib.js 

* Stack side panel on "Script" panel for callstack,
  This is visible when you BreakOnAllErrors or breakpoint and stop the debugger.
  ** Internal: debugger.js but the implementation was done by refactoring code.
  
* ScriptPanel->Options->Break On Top Level, like break on next
  When set the next top level script will halt the debugger like a breakpoint.  
  Should be similar to the oft-requested Break on Next.
  ** Internal: mostly firebug-service.js, some debugger.js, also changed component interface (.idl and .xpt file)

* limit filenames on locationList (script files) to 60 chars to avoid spilling UI 

* "better" debugging icons,
  The original icons made no sense to me so I invent some similar colored ones that I like better.

=== Console, Errors ===

* CSS errors report against source lines,
  CSS error used to report against CSS: but errors cause the CSS to be ignored so the erroneous 
  CSS was not even visible.
  
* BreakOnError puts error text in StatusBar
  BreakOnError halts the debugger but the console has not been updated yet. So you know there 
  is an error and even where it is but not the message.  This fix puts the error in red in the StatusBar.
  
* New Console options
   ShowWebErrors=Show All Web Errors
   ShowChromeErrors=Show Chrome Errors
   ShowChromeMessages=Show Chrome Messages
   ShowExternalErrors=Show External Errors
  
=== Bug Fixes ===
    ** Issue 69: incorrect enabled on new tabs
    ** Issue 234: console.log displays string objects as arrays
    ** Issue 230 CSS Errors reported on wrong or non-existent line numbers
    ** Issue 181 Net->XHR Response tab shows "Loading..." not response text.
    ** Issue 239 Fix for Frame refresh bug: http://groups.google.com/group/firebug/browse_thread/thread/c69e49b9815b2540