@@ -51,8 +51,8 @@ var Errors = Firebug.Errors = extend(Firebug.Module,
         if (context == FirebugContext)
             this.showCount(context.errorCount);
     },
-    
-	showErrorMessage: function(errorLabel)
+	
+	showMessageOnStatusBar: function(errorLabel)
 	{
 		if (statusBar)
 			statusBar.setAttribute("errors", "true");
@@ -140,8 +140,10 @@ var Errors = Firebug.Errors = extend(Firebug.Module,
 
                 if (!isWarning)    
                     this.increaseCount(context);
+					
     			var sourceName = object.sourceName;
     			var lineNumber = object.lineNumber;
+				
     			var trace = Firebug.errorStackTrace;
     			if (trace) 
     			{ 
@@ -152,8 +154,16 @@ var Errors = Firebug.Errors = extend(Firebug.Module,
 						lineNumber = stack_frame.lineNo;
 					}
 					var correctedError = object.init(object.errorMessage, sourceName, object.sourceLine,lineNumber, object.columnNumber, object.flags, object.category); 
-						
-    			}
+					if (FBTrace.DBG_ERRORS)     /*@explore*/
+						FBTrace.dumpProperties("errors.observe trace frames:", trace.frames);	     /*@explore*/	
+    			} 
+				else 
+				{
+					// There was no trace, but one was requested. Therefore fbs never called 
+					// debuggr.onError() because the error was for a different window.
+					if (Firebug.showStackTrace)
+						return; 
+				}
                 var error = new ErrorMessage(object.errorMessage, sourceName,
                         lineNumber, object.sourceLine, category, context);
                 
