@@ -33,53 +33,58 @@ this.dumpToPanel = false;
 
 this.dumpProperties = function(header, obj) 
 {
-	this.sysout(header+" sees obj \'"+obj+"\' with type: "+typeof(obj)+" contains:\n");
-	if (obj instanceof Array)
-	{	
-		if (FBTrace.dumpToPanel && FirebugContext)
-			return Firebug.TraceModule.log(obj, FirebugContext, "info", FirebugReps.Array, noThrottle);
-			
-		for (var p = 0; p < obj.length; p++)
-		{
-			try 
+	try {
+		this.sysout(header+" sees obj \'"+obj+"\' with type: "+typeof(obj)+" contains:\n");
+		if (obj instanceof Array)
+		{	
+			if (FBTrace.dumpToPanel && FirebugContext)
+				return Firebug.TraceModule.log(obj, FirebugContext, "info", FirebugReps.Array, noThrottle);
+				
+			for (var p = 0; p < obj.length; p++)
 			{
-				this.sysout("["+p+"]="+obj[p]+";\n");
-			}
-			catch (e) 
-			{
-				this.sysout("dumpProperties failed:"+e+"\n");
+				try 
+				{
+					this.sysout("["+p+"]="+obj[p]+";\n");
+				}
+				catch (e) 
+				{
+					this.sysout("dumpProperties failed:"+e+"\n");
+				}
 			}
 		}
-	}
-	else if (typeof(obj) == 'string') 
-	{
-		if (FBTrace.dumpToPanel && FirebugContext)
-			return Firebug.TraceModule.log(obj, FirebugContext, "info", FirebugReps.Text, noThrottle);
-
-		this.sysout(obj+"\n");	
-	}
-	//else if (obj.name && obj.name == 'NS_ERROR_XPC_JS_THREW_JS_OBJECT')
-	//{
-	//	
-	//}
-	else
-	{
-		if (FBTrace.dumpToPanel && FirebugContext)
-			return Firebug.TraceModule.log(obj, FirebugContext, "info", FirebugReps.Obj, noThrottle);
-
-		for (var p in obj) 
+		else if (typeof(obj) == 'string') 
 		{
-			try 
-			{
-				this.sysout("["+p+"]="+obj[p]+";\n");
-			}
-			catch (e) 
-			{
-				this.sysout("dumpProperties failed:"+e+"\n");
-			}
-		} 	
-	}
+			if (FBTrace.dumpToPanel && FirebugContext)
+				return Firebug.TraceModule.log(obj, FirebugContext, "info", FirebugReps.Text, noThrottle);
 	
+			this.sysout(obj+"\n");	
+		}
+		//else if (obj.name && obj.name == 'NS_ERROR_XPC_JS_THREW_JS_OBJECT')
+		//{
+		//	
+		//}
+		else
+		{
+			if (FBTrace.dumpToPanel && FirebugContext)
+				return Firebug.TraceModule.log(obj, FirebugContext, "info", FirebugReps.Obj, noThrottle);
+	
+			for (var p in obj) 
+			{
+				try 
+				{
+					this.sysout("["+p+"]="+obj[p]+";\n");
+				}
+				catch (e) 
+				{
+					this.sysout("dumpProperties failed:"+e+"\n");
+				}
+			} 	
+		}
+	}
+	catch(exc)
+	{
+		this.dumpStack("dumpProperties failed:"+exc+" trying with header="+header);
+	}	
 },
 
 this.consoleOut = function(text)
