@@ -38,6 +38,7 @@ ShowWebErrors=Show All Web Errors
 ShowChromeErrors=Show Chrome Errors
 ShowChromeMessages=Show Chrome Messages
 ShowExternalErrors=Show External Errors
+ShowStackTrace=Show Stack Trace With Errors
 LargeCommandLine=Larger Command Line
 Assertion=Assertion Failure
 Line=%S (line %S)
